// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonDialog control 1`] = `
<Wrapper
  bottom=""
  className="test-class"
  contentEditable={false}
  controlled={true}
  dialogClasses={
    Array [
      "test-class-dialog",
    ]
  }
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  left=""
  location="bottom"
  noedit={false}
  nohover={false}
  noripple={false}
  notriangle={false}
  obj="ButtonDialog"
  onClick={[Function]}
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  triangleClasses={Array []}
  visible={true}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-button-dialog test-class"
    id="ButtonDialog-0"
  >
    <Button
      bottom=""
      className=""
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage=""
      focus={false}
      height=""
      iconName="bomb"
      iconStyle=""
      id=""
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Button"
      onClick={[Function]}
      padding=""
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
          "fill": "#ffffff",
          "stroke": "#c0c0c0",
        }
      }
      testing={true}
      theme={null}
      tooltip=""
      top=""
      visible={true}
      width=""
      xcss={null}
    />
    <styled.div
      className="ui-dialog-popup test-class-dialog"
      location="bottom"
      onClick={[Function]}
      visible={false}
    >
      <styled.div
        sizing="normal"
        visible={false}
      >
        <p>
          Dialog test
        </p>
      </styled.div>
      <Styled(Triangle)
        className=""
        direction="up"
        location="bottom"
        nobase={true}
        sizing="normal"
        style={
          Object {
            "fill": undefined,
            "stroke": undefined,
          }
        }
        visible={false}
      />
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test creation of a ButtonDialog control on top 1`] = `
<Wrapper
  bottom=""
  className="test-class"
  contentEditable={false}
  controlled={true}
  dialogClasses={
    Array [
      "test-class-dialog",
    ]
  }
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  left=""
  location="top"
  noedit={false}
  nohover={false}
  noripple={false}
  notriangle={false}
  obj="ButtonDialog"
  onClick={[Function]}
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  triangleClasses={Array []}
  visible={true}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-button-dialog test-class"
    id="ButtonDialog-0"
  >
    <Button
      bottom=""
      className=""
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage=""
      focus={false}
      height=""
      iconName="bomb"
      iconStyle=""
      id=""
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Button"
      onClick={[Function]}
      padding=""
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
          "fill": "#ffffff",
          "stroke": "#c0c0c0",
        }
      }
      testing={true}
      theme={null}
      tooltip=""
      top=""
      visible={true}
      width=""
      xcss={null}
    />
    <styled.div
      className="ui-dialog-popup test-class-dialog"
      location="top"
      onClick={[Function]}
      visible={false}
    >
      <styled.div
        sizing="normal"
        visible={false}
      >
        <p>
          Dialog test
        </p>
      </styled.div>
      <Styled(Triangle)
        className=""
        direction="down"
        location="top"
        nobase={true}
        sizing="normal"
        style={
          Object {
            "fill": undefined,
            "stroke": undefined,
          }
        }
        visible={false}
      />
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test making the ButtonDialog invisible 1`] = `
<ButtonDialog
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  dialogClasses={Array []}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  left=""
  location="bottom"
  noedit={false}
  nohover={false}
  noripple={false}
  notriangle={false}
  obj="ButtonDialog"
  onClick={[Function]}
  padding=""
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  triangleClasses={Array []}
  visible={false}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    dialogClasses={Array []}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    iconName="bomb"
    iconStyle=""
    id=""
    left=""
    location="bottom"
    noedit={false}
    nohover={false}
    noripple={false}
    notriangle={false}
    obj="ButtonDialog"
    onClick={[Function]}
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "inherit",
      }
    }
    testing={true}
    theme={null}
    tooltip=""
    top=""
    triangleClasses={Array []}
    visible={false}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-button-dialog"
        id="ButtonDialog-0"
      >
        <div
          className="ui-button-dialog sc-dnqmqq fTbncG"
          id="ButtonDialog-0"
        >
          <Button
            bottom=""
            className=""
            contentEditable={false}
            controlled={true}
            direction="right"
            disabled={false}
            err={null}
            errorMessage=""
            focus={false}
            height=""
            iconName="bomb"
            iconStyle=""
            id=""
            left=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Button"
            onClick={[Function]}
            padding=""
            selected={false}
            sizing="normal"
            style={
              Object {
                "backgroundColor": "inherit",
                "color": "inherit",
                "fill": "#ffffff",
                "stroke": "#c0c0c0",
              }
            }
            testing={true}
            theme={null}
            tooltip=""
            top=""
            visible={false}
            width=""
            xcss={null}
          >
            <Wrapper
              bottom=""
              className=""
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              err={null}
              errorMessage=""
              focus={false}
              height=""
              iconName="bomb"
              iconStyle=""
              id=""
              left=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              obj="Button"
              onClick={[Function]}
              onError={[Function]}
              padding=""
              reset={false}
              selected={false}
              sizing="normal"
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "inherit",
                  "fill": "#ffffff",
                  "stroke": "#c0c0c0",
                }
              }
              testing={true}
              theme={null}
              tooltip=""
              top=""
              visible={false}
              width=""
              xcss={null}
            >
              <ThemeProvider
                theme={
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#c0c0c0",
                    "color": "#000000",
                    "headerBackgroundColor": "#004358",
                    "headerForegroundColor": "#ffffff",
                    "headerHoverColor": "#ffe11a",
                    "hoverColor": "#c0c0c0",
                    "inputBorderColor": "#c0c0c0",
                    "itemHoverColor": "#bedb39",
                    "selectedBackgroundColor": "#1f8a70",
                    "selectedForegroundColor": "#ffe11a",
                    "titleBarBackgroundColor": "#004358",
                    "titleBarForegroundColor": "#ffe11a",
                    "tooltipBackgroundColor": "#708090",
                    "tooltipForegroundColor": "#ffffff",
                    "transitionDelay": "0.5s",
                  }
                }
              >
                <styled.div
                  className="ui-button ripple"
                  disabled={false}
                  id="Button-0"
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "color": "inherit",
                      "fill": "#ffffff",
                      "stroke": "#c0c0c0",
                    }
                  }
                  visible={false}
                >
                  <div
                    className="ui-button ripple sc-bZQynM gWynPW"
                    disabled={false}
                    id="Button-0"
                    onClick={[Function]}
                    style={
                      Object {
                        "backgroundColor": "inherit",
                        "color": "inherit",
                        "fill": "#ffffff",
                        "stroke": "#c0c0c0",
                      }
                    }
                  >
                    <Icon
                      bottom=""
                      className=""
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      err={null}
                      errorMessage=""
                      focus={false}
                      height=""
                      iconName="bomb"
                      id=""
                      imageFile=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      obj="Icon"
                      padding=""
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      tooltip=""
                      top=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <Wrapper
                        bottom=""
                        className=""
                        contentEditable={false}
                        controlled={true}
                        direction="right"
                        disabled={false}
                        err={null}
                        errorMessage=""
                        focus={false}
                        height=""
                        iconName="bomb"
                        id=""
                        imageFile=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="Icon"
                        onError={[Function]}
                        padding=""
                        reset={false}
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={null}
                        tooltip=""
                        top=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#c0c0c0",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "headerHoverColor": "#ffe11a",
                              "hoverColor": "#c0c0c0",
                              "inputBorderColor": "#c0c0c0",
                              "itemHoverColor": "#bedb39",
                              "selectedBackgroundColor": "#1f8a70",
                              "selectedForegroundColor": "#ffe11a",
                              "titleBarBackgroundColor": "#004358",
                              "titleBarForegroundColor": "#ffe11a",
                              "tooltipBackgroundColor": "#708090",
                              "tooltipForegroundColor": "#ffffff",
                              "transitionDelay": "0.5s",
                            }
                          }
                        >
                          <styled.i
                            bottom=""
                            className="ui-icon fa fa-fw fa-bomb"
                            contentEditable={false}
                            controlled={true}
                            direction="right"
                            disabled={false}
                            err={null}
                            errorMessage=""
                            focus={false}
                            height=""
                            iconName="bomb"
                            id=""
                            imageFile=""
                            left=""
                            location="none"
                            noedit={false}
                            nohover={false}
                            noripple={false}
                            obj="Icon"
                            padding=""
                            selected={false}
                            sizing="normal"
                            style={Object {}}
                            testing={true}
                            theme={null}
                            tooltip=""
                            top=""
                            visible={true}
                            width=""
                            xcss={null}
                          >
                            <i
                              className="ui-icon fa fa-fw fa-bomb sc-bwzfXH hBOHvv"
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              height=""
                              id=""
                              selected={false}
                              style={Object {}}
                              width=""
                            />
                          </styled.i>
                        </ThemeProvider>
                      </Wrapper>
                    </Icon>
                  </div>
                </styled.div>
              </ThemeProvider>
            </Wrapper>
          </Button>
          <styled.div
            className="ui-dialog-popup"
            location="bottom"
            onClick={[Function]}
            visible={false}
          >
            <div
              className="ui-dialog-popup sc-htoDjs cujLQz"
              onClick={[Function]}
            >
              <styled.div
                sizing="normal"
                visible={false}
              >
                <div
                  className="sc-gzVnrw bAVfWX"
                >
                  <p>
                    Dialog test
                  </p>
                </div>
              </styled.div>
              <Styled(Triangle)
                className=""
                direction="up"
                location="bottom"
                nobase={true}
                sizing="normal"
                style={
                  Object {
                    "fill": undefined,
                    "stroke": undefined,
                  }
                }
                visible={false}
              >
                <Triangle
                  bottom=""
                  className="sc-iwsKbI blFPNt"
                  contentEditable={false}
                  controlled={true}
                  direction="up"
                  disabled={false}
                  err={null}
                  errorMessage=""
                  focus={false}
                  height=""
                  id=""
                  left=""
                  location="bottom"
                  nobase={true}
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  obj="Triangle"
                  padding=""
                  selected={false}
                  sizing="normal"
                  style={
                    Object {
                      "fill": undefined,
                      "stroke": undefined,
                    }
                  }
                  testing={true}
                  theme={null}
                  tooltip=""
                  top=""
                  visible={false}
                  width=""
                  xcss={null}
                >
                  <Wrapper
                    bottom=""
                    className="sc-iwsKbI blFPNt"
                    contentEditable={false}
                    controlled={true}
                    direction="up"
                    disabled={false}
                    err={null}
                    errorMessage=""
                    focus={false}
                    height=""
                    id=""
                    left=""
                    location="bottom"
                    nobase={true}
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    obj="Triangle"
                    onError={[Function]}
                    padding=""
                    reset={false}
                    selected={false}
                    sizing="normal"
                    style={
                      Object {
                        "fill": undefined,
                        "stroke": undefined,
                      }
                    }
                    testing={true}
                    theme={null}
                    tooltip=""
                    top=""
                    visible={false}
                    width=""
                    xcss={null}
                  >
                    <ThemeProvider
                      theme={
                        Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#c0c0c0",
                          "color": "#000000",
                          "headerBackgroundColor": "#004358",
                          "headerForegroundColor": "#ffffff",
                          "headerHoverColor": "#ffe11a",
                          "hoverColor": "#c0c0c0",
                          "inputBorderColor": "#c0c0c0",
                          "itemHoverColor": "#bedb39",
                          "selectedBackgroundColor": "#1f8a70",
                          "selectedForegroundColor": "#ffe11a",
                          "titleBarBackgroundColor": "#004358",
                          "titleBarForegroundColor": "#ffe11a",
                          "tooltipBackgroundColor": "#708090",
                          "tooltipForegroundColor": "#ffffff",
                          "transitionDelay": "0.5s",
                        }
                      }
                    >
                      <Triangle__SVGView
                        bottom=""
                        className="ui-triangle sc-iwsKbI blFPNt"
                        contentEditable={false}
                        controlled={true}
                        direction="up"
                        disabled={false}
                        err={null}
                        errorMessage=""
                        focus={false}
                        height=""
                        id=""
                        left=""
                        location="bottom"
                        nobase={true}
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="Triangle"
                        padding=""
                        preserveAspectRatio="xMidYMid meet"
                        selected={false}
                        sizing="normal"
                        style={
                          Object {
                            "fill": undefined,
                            "stokeWidth": "2px",
                            "stroke": undefined,
                          }
                        }
                        testing={true}
                        theme={null}
                        tooltip=""
                        top=""
                        version="1.1"
                        viewBox="0 0 40 40"
                        visible={false}
                        width=""
                        xcss={null}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <svg
                          className="ui-triangle sc-iwsKbI blFPNt Triangle__SVGView-iDjlpJ jixAbM"
                          contentEditable={false}
                          direction="up"
                          disabled={false}
                          height=""
                          id=""
                          preserveAspectRatio="xMidYMid meet"
                          selected={false}
                          style={
                            Object {
                              "fill": undefined,
                              "stokeWidth": "2px",
                              "stroke": undefined,
                            }
                          }
                          version="1.1"
                          viewBox="0 0 40 40"
                          width=""
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <polygon
                            points="-3,35, 20,10 43,35"
                            style={
                              Object {
                                "stroke": "none",
                              }
                            }
                          />
                          <polygon
                            points="-3,35, 20,10 43,35, 20,10"
                            style={
                              Object {
                                "strokeLinecap": "square",
                                "strokeWidth": undefined,
                              }
                            }
                          />
                        </svg>
                      </Triangle__SVGView>
                    </ThemeProvider>
                  </Wrapper>
                </Triangle>
              </Styled(Triangle)>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</ButtonDialog>
`;

exports[`Test retrieval of ButtonDialog props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "controlled": true,
  "dialogClasses": Array [],
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "iconStyle": "",
  "id": "",
  "left": "",
  "location": "bottom",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notriangle": false,
  "obj": "ButtonDialog",
  "onClick": [Function],
  "padding": "",
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "backgroundColor": "inherit",
    "color": "inherit",
  },
  "testing": true,
  "theme": null,
  "tooltip": "",
  "top": "",
  "triangleClasses": Array [],
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the disabling of the ButtonDialog control 1`] = `
<ButtonDialog
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  dialogClasses={Array []}
  direction="right"
  disabled={true}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  left=""
  location="bottom"
  noedit={false}
  nohover={false}
  noripple={false}
  notriangle={false}
  obj="ButtonDialog"
  onClick={[Function]}
  padding=""
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  triangleClasses={Array []}
  visible={true}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    dialogClasses={Array []}
    direction="right"
    disabled={true}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    iconName="bomb"
    iconStyle=""
    id=""
    left=""
    location="bottom"
    noedit={false}
    nohover={false}
    noripple={false}
    notriangle={false}
    obj="ButtonDialog"
    onClick={[Function]}
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "inherit",
      }
    }
    testing={true}
    theme={null}
    tooltip=""
    top=""
    triangleClasses={Array []}
    visible={true}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-button-dialog"
        id="ButtonDialog-0"
      >
        <div
          className="ui-button-dialog sc-dnqmqq fTbncG"
          id="ButtonDialog-0"
        >
          <Button
            bottom=""
            className=""
            contentEditable={false}
            controlled={true}
            direction="right"
            disabled={true}
            err={null}
            errorMessage=""
            focus={false}
            height=""
            iconName="bomb"
            iconStyle=""
            id=""
            left=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Button"
            onClick={[Function]}
            padding=""
            selected={false}
            sizing="normal"
            style={
              Object {
                "backgroundColor": "inherit",
                "color": "inherit",
                "fill": "#ffffff",
                "stroke": "#c0c0c0",
              }
            }
            testing={true}
            theme={null}
            tooltip=""
            top=""
            visible={true}
            width=""
            xcss={null}
          >
            <Wrapper
              bottom=""
              className=""
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={true}
              err={null}
              errorMessage=""
              focus={false}
              height=""
              iconName="bomb"
              iconStyle=""
              id=""
              left=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              obj="Button"
              onClick={[Function]}
              onError={[Function]}
              padding=""
              reset={false}
              selected={false}
              sizing="normal"
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "inherit",
                  "fill": "#ffffff",
                  "stroke": "#c0c0c0",
                }
              }
              testing={true}
              theme={null}
              tooltip=""
              top=""
              visible={true}
              width=""
              xcss={null}
            >
              <ThemeProvider
                theme={
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#c0c0c0",
                    "color": "#000000",
                    "headerBackgroundColor": "#004358",
                    "headerForegroundColor": "#ffffff",
                    "headerHoverColor": "#ffe11a",
                    "hoverColor": "#c0c0c0",
                    "inputBorderColor": "#c0c0c0",
                    "itemHoverColor": "#bedb39",
                    "selectedBackgroundColor": "#1f8a70",
                    "selectedForegroundColor": "#ffe11a",
                    "titleBarBackgroundColor": "#004358",
                    "titleBarForegroundColor": "#ffe11a",
                    "tooltipBackgroundColor": "#708090",
                    "tooltipForegroundColor": "#ffffff",
                    "transitionDelay": "0.5s",
                  }
                }
              >
                <styled.div
                  className="ui-button nohover"
                  disabled={true}
                  id="Button-0"
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "color": "inherit",
                      "fill": "#ffffff",
                      "stroke": "#c0c0c0",
                    }
                  }
                  visible={true}
                >
                  <div
                    className="ui-button nohover sc-bZQynM kuuPdU"
                    disabled={true}
                    id="Button-0"
                    onClick={[Function]}
                    style={
                      Object {
                        "backgroundColor": "inherit",
                        "color": "inherit",
                        "fill": "#ffffff",
                        "stroke": "#c0c0c0",
                      }
                    }
                  >
                    <Icon
                      bottom=""
                      className=""
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      err={null}
                      errorMessage=""
                      focus={false}
                      height=""
                      iconName="bomb"
                      id=""
                      imageFile=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      obj="Icon"
                      padding=""
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      tooltip=""
                      top=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <Wrapper
                        bottom=""
                        className=""
                        contentEditable={false}
                        controlled={true}
                        direction="right"
                        disabled={false}
                        err={null}
                        errorMessage=""
                        focus={false}
                        height=""
                        iconName="bomb"
                        id=""
                        imageFile=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="Icon"
                        onError={[Function]}
                        padding=""
                        reset={false}
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={null}
                        tooltip=""
                        top=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#c0c0c0",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "headerHoverColor": "#ffe11a",
                              "hoverColor": "#c0c0c0",
                              "inputBorderColor": "#c0c0c0",
                              "itemHoverColor": "#bedb39",
                              "selectedBackgroundColor": "#1f8a70",
                              "selectedForegroundColor": "#ffe11a",
                              "titleBarBackgroundColor": "#004358",
                              "titleBarForegroundColor": "#ffe11a",
                              "tooltipBackgroundColor": "#708090",
                              "tooltipForegroundColor": "#ffffff",
                              "transitionDelay": "0.5s",
                            }
                          }
                        >
                          <styled.i
                            bottom=""
                            className="ui-icon fa fa-fw fa-bomb"
                            contentEditable={false}
                            controlled={true}
                            direction="right"
                            disabled={false}
                            err={null}
                            errorMessage=""
                            focus={false}
                            height=""
                            iconName="bomb"
                            id=""
                            imageFile=""
                            left=""
                            location="none"
                            noedit={false}
                            nohover={false}
                            noripple={false}
                            obj="Icon"
                            padding=""
                            selected={false}
                            sizing="normal"
                            style={Object {}}
                            testing={true}
                            theme={null}
                            tooltip=""
                            top=""
                            visible={true}
                            width=""
                            xcss={null}
                          >
                            <i
                              className="ui-icon fa fa-fw fa-bomb sc-bwzfXH hBOHvv"
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              height=""
                              id=""
                              selected={false}
                              style={Object {}}
                              width=""
                            />
                          </styled.i>
                        </ThemeProvider>
                      </Wrapper>
                    </Icon>
                  </div>
                </styled.div>
              </ThemeProvider>
            </Wrapper>
          </Button>
          <styled.div
            className="ui-dialog-popup"
            location="bottom"
            onClick={[Function]}
            visible={false}
          >
            <div
              className="ui-dialog-popup sc-htoDjs cujLQz"
              onClick={[Function]}
            >
              <styled.div
                sizing="normal"
                visible={false}
              >
                <div
                  className="sc-gzVnrw bAVfWX"
                >
                  <p>
                    Dialog test
                  </p>
                </div>
              </styled.div>
              <Styled(Triangle)
                className=""
                direction="up"
                location="bottom"
                nobase={true}
                sizing="normal"
                style={
                  Object {
                    "fill": undefined,
                    "stroke": undefined,
                  }
                }
                visible={false}
              >
                <Triangle
                  bottom=""
                  className="sc-iwsKbI blFPNt"
                  contentEditable={false}
                  controlled={true}
                  direction="up"
                  disabled={false}
                  err={null}
                  errorMessage=""
                  focus={false}
                  height=""
                  id=""
                  left=""
                  location="bottom"
                  nobase={true}
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  obj="Triangle"
                  padding=""
                  selected={false}
                  sizing="normal"
                  style={
                    Object {
                      "fill": undefined,
                      "stroke": undefined,
                    }
                  }
                  testing={true}
                  theme={null}
                  tooltip=""
                  top=""
                  visible={false}
                  width=""
                  xcss={null}
                >
                  <Wrapper
                    bottom=""
                    className="sc-iwsKbI blFPNt"
                    contentEditable={false}
                    controlled={true}
                    direction="up"
                    disabled={false}
                    err={null}
                    errorMessage=""
                    focus={false}
                    height=""
                    id=""
                    left=""
                    location="bottom"
                    nobase={true}
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    obj="Triangle"
                    onError={[Function]}
                    padding=""
                    reset={false}
                    selected={false}
                    sizing="normal"
                    style={
                      Object {
                        "fill": undefined,
                        "stroke": undefined,
                      }
                    }
                    testing={true}
                    theme={null}
                    tooltip=""
                    top=""
                    visible={false}
                    width=""
                    xcss={null}
                  >
                    <ThemeProvider
                      theme={
                        Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#c0c0c0",
                          "color": "#000000",
                          "headerBackgroundColor": "#004358",
                          "headerForegroundColor": "#ffffff",
                          "headerHoverColor": "#ffe11a",
                          "hoverColor": "#c0c0c0",
                          "inputBorderColor": "#c0c0c0",
                          "itemHoverColor": "#bedb39",
                          "selectedBackgroundColor": "#1f8a70",
                          "selectedForegroundColor": "#ffe11a",
                          "titleBarBackgroundColor": "#004358",
                          "titleBarForegroundColor": "#ffe11a",
                          "tooltipBackgroundColor": "#708090",
                          "tooltipForegroundColor": "#ffffff",
                          "transitionDelay": "0.5s",
                        }
                      }
                    >
                      <Triangle__SVGView
                        bottom=""
                        className="ui-triangle sc-iwsKbI blFPNt"
                        contentEditable={false}
                        controlled={true}
                        direction="up"
                        disabled={false}
                        err={null}
                        errorMessage=""
                        focus={false}
                        height=""
                        id=""
                        left=""
                        location="bottom"
                        nobase={true}
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="Triangle"
                        padding=""
                        preserveAspectRatio="xMidYMid meet"
                        selected={false}
                        sizing="normal"
                        style={
                          Object {
                            "fill": undefined,
                            "stokeWidth": "2px",
                            "stroke": undefined,
                          }
                        }
                        testing={true}
                        theme={null}
                        tooltip=""
                        top=""
                        version="1.1"
                        viewBox="0 0 40 40"
                        visible={false}
                        width=""
                        xcss={null}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <svg
                          className="ui-triangle sc-iwsKbI blFPNt Triangle__SVGView-iDjlpJ jixAbM"
                          contentEditable={false}
                          direction="up"
                          disabled={false}
                          height=""
                          id=""
                          preserveAspectRatio="xMidYMid meet"
                          selected={false}
                          style={
                            Object {
                              "fill": undefined,
                              "stokeWidth": "2px",
                              "stroke": undefined,
                            }
                          }
                          version="1.1"
                          viewBox="0 0 40 40"
                          width=""
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <polygon
                            points="-3,35, 20,10 43,35"
                            style={
                              Object {
                                "stroke": "none",
                              }
                            }
                          />
                          <polygon
                            points="-3,35, 20,10 43,35, 20,10"
                            style={
                              Object {
                                "strokeLinecap": "square",
                                "strokeWidth": undefined,
                              }
                            }
                          />
                        </svg>
                      </Triangle__SVGView>
                    </ThemeProvider>
                  </Wrapper>
                </Triangle>
              </Styled(Triangle)>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</ButtonDialog>
`;
